# cvplot

./: CMakeLists.txt
include/cvplot/: figure.h  window.h
src/cvplot/: color.cpp  figure.cpp  highgui.cpp  window.cpp
src/demo/: demo.cc
